--- a/events.html
+++ b/events.html
@@ -127,183 +127,6 @@
   </header><!-- End Header -->
 
   <main id="main">
-    <!-- ======= Why Us Section ======= -->
-    <section data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
-      <div class="section-title">
-        <h2>Upcoming</h2>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6">
-            <img src="assets/img/RegencySoiree.png" class="img-fluid" alt="" style="box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);">
-            <div class="text-center d-flex align-items-center justify-content-center partnership-row">
-              <a href="https://marblecityballroom.com" target="_blank" class="mx-4 my-4"><img src="assets/img/mcb_logo.png" style="max-width: 80px;"></a>
-              <p>In partnership with <a href="https://marblecityballroom.com" target="_blank">Marble City Ballroom</a></p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="container" style="border: black 5px double; padding: 1em;">
-              <div class="text-center">
-                <img src="assets/img/LadyWhistledown.png" style="max-width: 120px;">
-              </div>
-              <p>
-                Dearest reader,
-              </p>
-              <p>
-                The social season is upon us, and whispers of an extraordinary event have reached my ears. Prepare to be captivated, for a soirée of unparalleled grandeur awaits!
-              </p>
-              <p>
-                Dust off your finest attire, for this is an occasion to showcase your most exquisite period garb.
-              </p>
-              <p>
-                A dance lesson shall commence the festivities, ensuring even the most hesitant wallflower blossoms into a graceful swan upon the dance floor. As the night unfolds, enjoy a cash bar complete with two Signature Drinks, modernized Regency-era music, performances, and more!
-              </p>
-              <p>
-                Remember, dear reader, this soirée is not merely an opportunity to revel in the splendor of the era. It is a compassionate endeavor, a hand outstretched to those navigating the complexities of mental health. Your presence at this enchanting evening will directly contribute to the development of Transformance Art's upcoming Meraki Project, "Strength and Survival: Creative Expressions of Overcoming Suicide and Loss." Together, we shall cultivate an artistic haven where hope flickers, healing blossoms, and resilience takes root; a sanctuary for those touched by the shadows of depression, the weight of loss, and the journey towards recovery.
-              </p>
-              <p>
-                Secure your invitation posthaste, for this is an affair not to be missed. Let it be known that your presence at the Regency Soirée shall be the talk of the ton, and a beacon of light in the darkness.
-              </p>
-              <a href="https://www.eventbrite.com/e/regency-soiree-tickets-1006192778687" target="_blank" class="yellow-btn" onclick="gtag_report_conversion()">Buy Tickets</a>
-            </div>
-          </div>
-        </div>
-        <hr>
-        <div class="row">
-          <div class="col-lg-6 pb-4">
-            <h3>
-              Features:
-            </h3>
-            <ul>
-              <li>
-                <b>Regency Splendor:</b> Immerse yourself in the elegance of the early 19th century with period attire and décor
-              </li>
-              <li>
-                <b>Dance the Night Away:</b> Learn the steps to a Bridgerton-inspired dance, taught by Marble City Ballroom, and twirl across the dance floor to enchanting music
-              </li>
-              <li>
-                <b>Signature Cocktails:</b> Sip on specially crafted Bridgerton-inspired drinks at the cash bar
-              </li>
-              <li>
-                <b>Enchanting Music:</b> Enjoy the modern spin on Regency-era music that is featured in the Bridgerton TV series
-              </li>
-              <li>
-                <b>Performances:</b> Be entertained by live music and dance performances throughout the evening
-              </li>
-              <li>
-                <b>Photo Ops:</b> There is a dedicated photo area, but the entire event will be full of photo ops - ensuring you have every opportunity to capture beautiful moments!
-              </li>
-              <li>
-                <b>Silent Auction:</b> Participate in a silent auction - with proceeds benefiting a worthy cause and some very exciting items to bid on (just in time for Christmas!)
-              </li>
-              <li>
-                <b>Support a Worthy Cause:</b>  Proceeds benefit Transformance Art's Meraki Project, promoting mental health awareness and healing through the arts
-              </li>
-            </ul>
-            <h3>
-              VIP Experience:
-            </h3>
-            <ul>
-              <li>
-                Enjoy a delectable pre-soirée dinner and drinks (starting at 5:30pm)
-              </li>
-              <li>
-                Exclusive live music performances provided by:
-                <ul>
-                  <li>
-                    <b>Smoky String Quartet:</b> Euclides Andrade, Violin; Fresly Umana, Violin; Jackson Howard, Viola; Micah Taylor, Cello
-                  </li>
-                  <li>
-                    <b>Flute Duo:</b> <a href="https://flutifulusa.com/" target="_blank">Sherbie Hampson</a> & Julie Arnold
-                  </li>
-                  <li>
-                    <b>Harpist:</b> <a href="https://megankabelaharpist.com/index.htm" target="_blank">Megan Kabela</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-6">
-            <h3>
-              FAQs:
-            </h3>
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    What is the dress code?
-                  </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Regency-era attire is strongly encouraged, but formal wear is also acceptable.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    Are there age restrictions?
-                  </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Any attendees under the age of 18 must be accompanied by a parent or legal guardian. You must be 21 or older to consume alcoholic beverages. Please bring a valid ID.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    What does my ticket include?
-                  </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">General admission includes access to the ball, dance lesson, silent auction, light hors d'oeuvres, drinks, and entertainment (including live music and dance performances). VIP tickets include a pre-soirée dinner, drinks, exclusive live performances, and early access.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                    Can I purchase tickets at the door?
-                  </button>
-                </h2>
-                <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Unfortunately, we cannot accommodate ticket purchases at the door. To ensure our caterers can adequately prepare for our guests, we kindly request that all tickets be purchased in advance.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                    Is there parking available?
-                  </button>
-                </h2>
-                <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Yes, ample parking is available on-site.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                    Will there be food available for purchase?
-                  </button>
-                </h2>
-                <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Delightful sweets and a charcuterie board will be provided for all guests to enjoy. VIP guests will also be treated to an exclusive pre-soirée dinner at 5:30 pm.</div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
-                    How can I learn more about the project that this event is raising money for?
-                  </button>
-                </h2>
-                <div id="flush-collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Visit <a href="https://transformanceart.org/suicideawareness">transformanceart.org/suicide-awareness</a> for more information.</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- End Why Us Section -->
-
     <!-- ======= Service Details Section ======= -->
     <section class="service-details">
       <div class="section-title text-white">
@@ -311,7 +134,22 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-6 offset-md-3 d-flex align-items-stretch" data-aos="fade-up">
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
+            <div class="card">
+              <div class="card-img">
+                <img src="assets/img/regency-soiree.png" alt="Regency Soirée Event">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Regency Soirée | Nov. 10, 2024</h5>
+                <p class="card-text">A Bridgerton-inspired fundraiser ball that featured live music and dance performances, a dance lesson (provided by <a href="https://marblecityballroom.com/" target="_blank">Marble City Ballroom</a>), signature cocktails, light hors d'oeuvres and a silent auction.</p>
+                <p class="card-text">The proceeds of this event are dedicated to the development of our 2025 project "<a href="/projects" target="_blank">Strength and Survival: Creative Expressions of Suicide and Loss</a>".</p>
+                <div class="text-center">
+                  <a href="https://www.facebook.com/media/set/?set=a.523308694033742&type=3" target="_blank" class="basic-btn">Photo Gallery</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-items-stretch" data-aos="fade-up">
             <div class="card">
               <div class="card-img">
                 <img src="assets/img/nuevo-tango.png" alt="Nuevo Tango Event">
