--- a/events.html
+++ b/events.html
@@ -48,7 +48,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Transformance Art | Events</title>
-	<meta name="description" content="Explore our upcoming events and discover the impact of the arts. Find inspiration, connection, and joy.">
+	<meta name="description" content="Explore our upcoming events and discover the impact of innovative fine arts experiences. Find inspiration, connection, and joy.">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
 
