--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Transformance Art | Home</title>
-	<meta name="description" content="Empowering innovative arts initiatives that promote hope, healing, and restoration, both individually and collectively, through the transformative power of performance arts experiences.">  
+	<meta name="description" content="Empowering innovative arts initiatives that enable individual and collective wellness through relevant fine arts experiences.">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -117,7 +117,7 @@
     </video>
     <div class="container text-center">
       <h2 class="animate__animated animate__fadeInDown">Transformation Through Artistic Expression</h2>
-      <p class="animate__animated animate__fadeInUp">Transformance artists build bridges through music and art - creating a world where artistic expression will act as a powerful catalyst for personal and societal transformation.</p>
+      <p class="animate__animated animate__fadeInUp">Transformance artists build bridges through music and art - creating a world where artistic expression will act as a powerful catalyst for personal and societal wellness.</p>
       <a href="#about" class="btn-get-started animate__animated animate__fadeInUp">Learn More</a>
     </div>
   </section><!-- End Hero -->
@@ -128,9 +128,7 @@
 
         <div class="section-title">
           <h2>Who We Are</h2>
-          <p class="lead"><span>Transformance Art</span> is dedicated to empowering innovative arts initiatives that promote hope, healing,
-            and restoration, both individually and collectively, through the transformative power of
-            performance arts experiences.</p>
+          <p class="lead"><span>Transformance Art</span> is dedicated to empowering innovative arts initiatives that enable individual and collective wellness through relevant fine arts experiences.</p>
           <a href="about" class="basic-btn">Read More</a>
         </div>
       </div>
@@ -151,7 +149,7 @@
               Meraki [may-rah-kee] is a Greek word that means "to do something with soul, creativity, or love; to put something of yourself in your work".
             </p>
             <p>
-              The Meraki Projects will be a series of expressive artistic experiences that will promote hope, healing, and restoration. Each project will have a specific focus with the goal of bringing the experiences to cities around the world. The first project will focus on suicide awareness.
+              The Meraki Projects will be a series of contemporary fine arts experiences that will promote hope, healing, and restoration. Each project will have a specific focus with the goal of bringing the experiences to cities around the world. The first project will focus on suicide awareness.
             </p>
             <hr>
             <div class="icon-box">
