--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Transformance Art | About</title>
-	<meta name="description" content="Learn about Transformance Art, an organization dedicated to using music, dance, painting, poetry, and other art forms to inspire transformation and healing. Discover our mission, meet our team, and see how we bring hope and restoration to those facing life’s challenges.">  
+	<meta name="description" content="Learn about Transformance Art, an organization dedicated to empowering innovative arts initiatives that enable individual and collective wellness through relevant fine arts experiences. Discover our mission, meet our team, and see how we bring hope and restoration to those facing life’s challenges.">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
@@ -119,13 +119,11 @@
       </div>
       <div class="container pb-5" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-white">Mission</h3>
-        <p class="lead text-white">Fostering transformational performing arts experiences.</p>
+        <p class="lead text-white">Fascilitating personal and societal wellness through relevant fine arts experiences.</p>
       </div>
       <div class="container pb-5" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-white">Vision</h3>
-        <p class="lead text-white">We are dedicated to empowering innovative arts initiatives that promote hope, healing,
-          and restoration, both individually and collectively, through the transformative power of
-          performance arts experiences. </p>
+        <p class="lead text-white">We are dedicated to empowering innovative arts initiatives that enable individual and collective wellness through relevant fine arts experiences.</p>
       </div>
       <div class="container pb-5" data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-white">Transformance = Transformational + Performance</h3>
