--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Transformance Art | Projects</title>
-	<meta name="description" content="Explore the projects at Transformance Art, showcasing transformative works in music, dance, painting, poetry, and other art forms. Discover how our artistic initiatives foster healing, hope, and community engagement. See the impact of art in action and get inspired by our creative endeavors.">  
+	<meta name="description" content="Explore the projects at Transformance Art, showcasing transformative works in music, dance, painting, poetry, and other art forms. Discover how our innovative arts initiatives enable individual and collective wellness through relevant fine arts experiences. See the impact of art in action and get inspired by our creative endeavors.">  
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
