--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               Meraki [may-rah-kee] is a Greek word that means "to do something with soul, creativity, or love; to put something of yourself in your work".
             </p>
             <p>
-              The Meraki Projects will be a series of contemporary fine arts experiences that will promote hope, healing, and restoration. Each project will have a specific focus with the goal of bringing the experiences to cities around the world. The first project will focus on suicide awareness.
+              The Meraki Projects will be a series of relevant fine arts experiences that will promote hope, healing, and restoration. Each project will have a specific focus with the goal of bringing the experiences to cities around the world. The first project will focus on suicide awareness.
             </p>
             <hr>
             <div class="icon-box">
